syntax = "proto3";

package transport;

option go_package = "internal/transport;transport";

// EnvelopeProto 定义了消息的结构
message EnvelopeProto {
  string version = 1; // 协议版本
  string type = 2; // 消息类型
  string schema = 3; // 可选的负载模式标识符
  string datacontent = 4; // 数据内容类型

  string mid = 5; // 消息ID，用于幂等性
  string correlation = 6; // 关联ID
  string causation = 7; // 因果ID
  string trace_id = 8; // 跟踪ID

  string tenant = 9; // 租户信息
  string conversation = 10; // 会话ID
  string from = 11; // 消息发送者
  repeated string to = 12; // 消息接收者
  string partition_key = 13; // 分区键

  int64 ts = 14; // 时间戳（毫秒）
  int64 ttl_ms = 15; // 生存时间（毫秒）
  int64 expires_at = 16; // 过期时间戳
  map<string, string> meta = 17; // 元数据

  string signature = 18; // 签名
  bool encrypted = 19; // 是否加密

  int32 priority = 20; // 优先级

  int32 chunk_index = 21; // 当前分片索引
  int32 total_chunks = 22; // 总分片数

  string language = 23; // 消息语言

  string status = 24; // 消息状态

  bytes payload = 25; // 消息内容
  bytes data = 26; // 二进制数据
  map<string, string> attributes = 27; // 自定义属性
}
